# mandelbrot

./: CMakeLists.txt  README.md  mandelbrot.cpp  mandelbrot_multithread.cpp  mandelbrot_plot.py
